Fixed issue with cog container blocking pointer events, and made cogs on mobile looks better

--- a/styles/create-fable.module.scss
+++ b/styles/create-fable.module.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-
+  pointer-events: none;
   display: flex;
 }
 
@@ -32,10 +32,10 @@
   transform: rotate(140deg) translate(20%, 50%);
   margin-left: 0;
   margin-right: auto;
+  filter: brightness(1.05);
 
   @media screen and (max-width: variables.$small-screen){
-    margin-top: 40%;
-    transform: translate(-50%) rotate(120deg);
+    transform: translate(-55%, 85%) scaleX(-1) rotate(-80deg) ;
   }
 }
 
