--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -96,7 +96,7 @@
   border-radius: variables.$border-radius;
   z-index: 999;
   // Timing function is elastic
-  animation: modal-pop-in 0.25s cubic-bezier(0.175, 0.5, 0.32, 1.2) forwards;
+  animation: modal-pop-in 0.25s cubic-bezier(0, 0.3, 0.32, 1.2) forwards;
   
   display: flex;
   flex-direction: column;
